--- a/javascript/Function/Bài tập/Manage App/style.css
+++ b/javascript/Function/Bài tập/Manage App/style.css
@@ -31,6 +31,9 @@ h2 {
     border: 1px solid lightgreen;
     color: white;
 }
+#Addbutton:hover{
+    background-color: rgba(144,238,144,0.3);
+}
 .Display_field {
     margin-top: 15px;
     margin-left: 15px;
@@ -54,15 +57,31 @@ h3 {
 .product {
     width: 300px;
     height: 40px;
+    font-weight: bold;
+    padding-left: 15px;
 }
 .button {
     width: 100px;
     height: 40px;
     text-align: center;
     border-radius: 5px;
-    color: white;
-    background-color: #f2f2f2;
 }
 #ProductTotal {
     color: darkred;
+    margin-top: 15px;
+    margin-left: 15px;
+    width: 100px;
+    font-weight: bold;
+}
+
+#TableButton {
+    width: 60px;
+    height: 30px;
+    background-color: lightgreen;
+    border-radius: 5px;
+    border: 1px solid lightgreen;
+    color: white;
+}
+#TableButton:hover{
+    background-color: rgba(144,238,144,0.3);
 }
