--- a/javascript/Function/Bài tập/Manage App/style.css
+++ b/javascript/Function/Bài tập/Manage App/style.css
@@ -50,10 +50,13 @@ h3 {
     border-collapse: collapse;
 }
 #table td{
-    background-color: #f2f2f2;
     border: 0;
     border-radius: 5px;
 }
+#table tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
 .product {
     width: 300px;
     height: 40px;
